# varpred

./: Cargo.toml  README.md
sample/: sample.gtf
src/: args.rs  expr.rs  fasta.rs  gc.rs  machine.rs  main.rs
