[package]
name = "varpred"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
smartcore = { version = "0.4.8", features = ["datasets", "ndarray-bindings"] }
tokio = "1.48.0"
